<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mafia Project Pro</string>
    <string name="number_of_doctor">Doctors:</string>
    <string name="number_of_whore">Prostitutes:</string>
    <string name="number_of_maniac">Maniacs:</string>
    <string name="number_of_godfather">Godfathers:</string>
    <string name="number_of_mafia">Mafias:</string>
    <string name="number_of_players">Players:</string>
    <string name="add_another_role">To add the additional roles:</string>
    <string name="del">Delete</string>
    <string name="ok">OK</string>
    <string name="customize_game">Game settings</string>
    <string name="number_of_sheriff">Sheriffs:</string>
    <string name="number_of_players_err">The quantity of roles exceeds the quantity of players.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close_app">Are you sure that you want to close the application?</string>
    <string name="cam_err">The start of small lamp wasn’t succeed. Error code:</string>
    <string name="error_err">Error!</string>
    <string name="support_flashlight">The device doesn\'t maintain a small lamp!</string>
    <string name="end_game">Are you sure that you want to finish the game?</string>
    <string name="launched">Copyright ©\nCharley Skills / Max Kramarenko</string>
    <string name="support">with the support\nBetonka Inc. &amp; Nikonofune</string>
    <string name="start_game">START GAME</string>
    <string name="help">HELP</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="number_of_players_big_err">The maximal quantity of the players are reached.</string>
    <string name="number_of_players_zero_err">The minimal quantity of the players are reached.</string>
    <string name="civilian">Civilian</string>
    <string name="mafia">Mafia</string>
    <string name="sheriff">Sheriff</string>
    <string name="godfather">Godfather</string>
    <string name="doctor">Doctor</string>
    <string name="whore">Prostitute</string>
    <string name="maniac">Maniac</string>
    <string name="card_ends">The play cards came to an end.</string>
    <string name="list_of_players">List of players</string>
    <string name="add_ban_LWP">Add the foul</string>
    <string name="LWP_remove_ban">Cancel the foul</string>
    <string name="cancel">Cancel</string>
    <string name="LWP_removePlayer">has been eliminated from the game</string>
    <string name="no_ban_LWP">The player doesn\'t have any fouls!</string>
    <string name="LWP_remove_player">Add the foul / To eliminate the player</string>
    <string name="votefor_LWP">To expose on the vote</string>
    <string name="LWP_unvotefor">To recall from the vote</string>
    <string name="LWP_kill_player">Kill the player</string>
    <string name="voting_countofnumbersbiggerthancountplayers">The quantity of the votes is bigger than the quantity of the players.</string>
    <string name="voting_gamecontinues">According to the results of the vote, nobody leave the game.</string>
    <string name="voting_shotingbetween">The firefight between the players</string>
    <string name="voting_player">Player</string>
    <string name="voting_voting">The vote</string>
    <string name="LWP_addfoul">has been added foul</string>
    <string name="LWP_removefoul">You canceled the foul to the </string>
    <string name="LWP_player">Player</string>
    <string name="sys_nogovote">is recalled from the vote.</string>
    <string name="voting_mafiawin">Mafia won.</string>
    <string name="voting_civilianwin">Citizens won.</string>
    <string name="sys_fromthegame">from the game.</string>
    <string name="sys_wasputtothevote">is exposed on the vote.</string>
    <string name="sys_waskilled">was killed.</string>
    <string name="add">Add</string>
    <string name="remove">Delete</string>
    <string name="entertext">Please, type the text</string>
    <string name="voting_returntogame">Return to the game</string>
    <string name="add_addicted_role">To add the role click Save</string>
    <string name="endgame_LWP">Finish the game</string>
    <string name="anotherthings_LWP">Additional actions:</string>
    <string name="help_LWP">Help</string>
    <string name="voting_skirmish">Do you want, that these players to leave the game?</string>
    <string name="voting_skirmish_leftplayer">All the players\nleave the game</string>
    <string name="adviewinterstitial_text_1">adviewinterstitial_text_1</string>
    <string name="leftthegame"> leaves the game.</string>
    <string name="mafiaprojectpro">Version without the advertisement and with the possibility to change the pictures of the roles, the cards back sides and the background of the desktop.</string>
    <string name="mafiaprojectpro_button">Download</string>
    <string name="classic_ChooseGameMode">Classic</string>
    <string name="GameMode_ChooseGameMode">Choose gamemode</string>
    <string name="club_ChooseGameMode">Club</string>
    <string name="ChooseGameMode_Customize">Customize game</string>
    <string name="ChooseGameMode_classic_info">6 Civilian\'s, 2 Mafia\'s, 1 GodFather\nWith virtual cards</string>
    <string name="ChooseGameMode_clubinfo">Classic mode, without virtual cards</string>
    <string name="ChooseGameMode_customizeinfo">Configure the number players, the mafia, civilians and other characters</string>
    <string name="ChooseGameMode_havent_preset">You haven\'t saved any game setup</string>
    <string name="ChooseGameMode_your_list_settings">Saved setups</string>
    <string name="ChooseGameMode_Cases_few_mafia">Mafia\'s</string>
    <string name="ChooseGameMode_Cases_2_4doctor">Doctor\'s</string>
    <string name="ChooseGameMode_Cases_4_fewdoctor">Doctor\'s</string>
    <string name="ChooseGameMode_Cases_2_4whore">Whore\'s</string>
    <string name="ChooseGameMode_Cases_4_fewwhore">Whore\'s</string>
    <string name="ChooseGameMode_Cases_2_4maniac">Maniac\'s</string>
    <string name="ChooseGameMode_Cases_4_fewmaniac">Maniac\'s</string>
    <string name="ChooseGameMode_Cases_2_4sheriff">Sheriff\'s</string>
    <string name="ChooseGameMode_Cases_4_fewsheriff">Sheriff\'s</string>
    <string name="ChooseGameMode_Cases_2_4godfather">GodFather\'s</string>
    <string name="ChooseGameMode_Cases_4_fewgodfather">GodFather\'s</string>
    <string name="ChooseGameMode_Cases_2_4players">Player\'s</string>
    <string name="ChooseGameMode_Cases_4_fewplayers">Player\'s</string>
    <string name="ChooseGameMode_Cases_fewcivilian">Civilian\'s</string>
    <string name="CustomizeGame_NameOfPreset">Name of game setup:</string>
    <string name="CustomizeGame_Save">Save</string>
    <string name="number_of_civilians">Civilians:</string>
    <string name="Question_setNicknames">Who set nicknames for the game?</string>
    <string name="Question_setNicknames_yes">Master of the game</string>
    <string name="Question_setNicknames_no">Players</string>
    <string name="Question_setNicknames_cancel">Without nicknames</string>
    <string name="Question_setNicknamesClub">Using nicknames in the game?</string>
    <string name="SNAR_ChooseRole">Choose role</string>
    <string name="SNAR_Title_1">Set nicknames and roles</string>
    <string name="SNAR_Title_2">Set nicknames</string>
    <string name="LWP_show_player_role">Show player role</string>
    <string name="SNAR_noRole">Firstly, add role to player</string>
    <string name="GreenDesk_SetYourNickname">Set your nickname</string>
    <string name="CustomizeGame_playwithcards">Do you want play with cards in app, or use own cards?</string>
    <string name="CustomizeGame_playwithcards_yes">Use virtual cards</string>
    <string name="CustomizeGame_playwithcards_no">Use own cards</string>
    <string name="CustomizeGame_SavePreset">Save setup</string>
    <string name="CustomizeGame_Saved">Setup saved.</string>
    <string name="CustomizeGame_enterNamePreset">Enter setup name</string>
    <string name="STATActivity_title">Players statistics</string>
    <string name="STATActivity_nickname">Nickname</string>
    <string name="STATActivity_count_games">Played\ngames</string>
    <string name="LWP_civilians">Civilians</string>
    <string name="LWP_mafias">Mafia</string>
    <string name="LWP_whowins">Which team won?</string>
    <string name="LWP_maniacOrWhore">Maniac or Whore</string>
    <string name="HomeActivity_statistics">STATISTICS</string>
    <string name="STATActivity_win">Win games</string>
    <string name="STATActivity_total">Total played games</string>
    <string name="STATActivity_delete_player">Del player</string>
    <string name="STATActivity_delete_all_statistics">Delete all statistics</string>
    <string name="GreenDeskActivity_chooseYourNickname">Choose your nickname</string>
    <string name="SNAR_GreenDeskActivity_all_nicknames_used">All nicknames are already in use</string>
    <string name="SNARActivity_chooseYourNickname">Choose nickname</string>
    <string name="SNAR_GreenDeskActivity_no_nicknames_in_statistics">You did not use the nicknames before</string>
    <string name="STATActivity_Cases_1_win">games</string>
    <string name="STATActivity_Cases_2_4_win">games</string>
    <string name="STATActivity_Cases_few_win">games</string>
    <string name="ThemeActivity">Theme</string>
    <string name="ThemeActivity_doctor">Doctor\'s card</string>
    <string name="ThemeActivity_back">The back side</string>
    <string name="ThemeActivity_background">Background of desk</string>
    <string name="Theme">THEME</string>
    <string name="ThemeActivity_whore">Whore\'s card</string>
    <string name="ThemeActivity_maniac">Maniac\'s card</string>
    <string name="ThemeActivity_sheriff">Sheriff\'s card</string>
    <string name="ThemeActivity_godfather">Godfather\'s card</string>
    <string name="ThemeActivity_mafia">Mafia\'s card</string>
    <string name="ThemeActivity_civilian">Civilian\'s card</string>
    <string name="LWP_endgame">Left the game and save results of the game?</string>
    <string name="LWP_no_just_left">Exit the game\nno save results</string>
    <string name="STATActivity_compare_players">Compare players</string>
    <string name="STATActivity_del_all_statistics">Delete all statistics</string>
    <string name="STATActivity_del_player_statistics">Delete player statistics</string>
    <string name="STATActivity_accept">Done</string>
    <string name="ChooseGameMode_additional_role">Additional roles</string>
    <string name="CustomizeGame_zeroplayers">First, add the role</string>
    <string name="STATActivity_winlabel">win</string>
</resources>
