<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff000000"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/image_mafiaproject"
        android:layout_width="255dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/pic_mafiaproject"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_versionapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="60dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_builtapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launched"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="17sp"
            android:layout_gravity="left"
            android:textColor="#ffffff" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:text="@string/support"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textIsSelectable="false"
            android:textSize="17sp"
            android:visibility="invisible" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/button_back"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/default_button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@android:color/background_dark"
                android:textSize="23sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </FrameLayout>

    </FrameLayout>

</LinearLayout>